--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,12 @@
 <tr>
-  <td class="message">
+  <td class="message" id='<%= dom_id message %>'>
+    <span class="message_menu">
+      <% if current_user && current_user == message.user %>
+        <%= link_to "Delete message", [message.topic, message], :method => :delete %>
+      <% end %>
+    </span>
     <span class="timestamp">
-      Posted <%= time_ago_in_words(message.created_at) %> ago.
+      Posted by <%= link_to "#{message.user.name}", message.user %> <%= time_ago_in_words(message.created_at) %> ago.
     </span><br />
     <span class="content"><%= message.content %></span>
   </td>
