Associated Topics with Users.

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,9 @@
 <h1>All topics</h1>
 
+<%= will_paginate %>
+
 <table class="topics" summary="All topics">
   <%= render @topics %>
 </table>
+
+<%= will_paginate %>
