--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
   <nav class="round">
     <ul>
       <li><%= link_to "Home", topics_path %></li>
+      <li><%= link_to('Add topic', new_topic_path)  %></li>
     </ul>
   </nav>
 </header>
