--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -2,8 +2,14 @@
 <%= form_for @topic do |f| %>
   <%= render 'shared/form_messages', :object => f.object %>
 
-  <div><%= f.label :title %> <i>(3 chars minimum, 140 chars maximum)</i><br />
-  <%= f.text_field :title %></div>
+  <%= f.label :title %> <i>(3 chars minimum, 140 chars maximum)</i><br />
+  <%= f.text_field :title %>
+  <%= f.fields_for :messages do |m| %>
+    <div class="message_content">
+      <%= m.label :content, :class => 'invisible' %>
+      <%= m.text_area :content %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit "Submit" %>
   </div>
