Changed ordering on Topics index page.

--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,5 +1,8 @@
 <tr>
   <td class="topic">
+    <span class="timestamp">
+      Updated <%= topic.messages.empty? ? topic.created_at : time_ago_in_words(topic.messages.first.created_at) %> ago.
+    </span><br />
     <%= link_to topic.title, topic %>
   </td>
 </tr>
