--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,8 @@
 
   <nav class="round">
     <ul>
-      <li><%= link_to "Home", topics_path %></li>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Back", :back %></li>
       <li><%= link_to('Add topic', new_topic_path)  %></li>
     </ul>
   </nav>
