--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'markitup/jquery.markitup.js' %>
+    <%= javascript_include_tag 'markitup/sets/bbcode/set.js' %>
   </head>
   <body>
     <div class="container">
