--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Back", :back %></li>
       <li><%= link_to('Add topic', new_topic_path)  %></li>
+      <li><%= link_to('Categories', categories_path)  %></li>
     </ul>
   </nav>
 </header>
