--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -4,6 +4,8 @@
 
   <%= f.label :title %> <i>(3 chars minimum, 140 chars maximum)</i><br />
   <%= f.text_field :title %>
+  <%= f.label :category %>
+  <%= f.select :category_id, Category.all.collect {|p| [ p.name, p.id ] }, { :include_blank => 'None' } %>
   <%= f.fields_for :messages do |m| %>
     <div class="message_content">
       <%= m.label :content, :class => 'invisible' %>
